# onlinemonitor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  onlinemonitor.cc  smonlinemonitor.cc
analyzer/SAMURAI/include/: BDCAnalyzer.hh  CoinAnalyzer.hh  FDC1Analyzer.hh  FDC2Analyzer.hh  HODAnalyzer.hh  NEBULAAnalyzer.hh  NINJAAnalyzer.hh  PlasticAnalyzer.hh  TestAnalyzer.hh
analyzer/SAMURAI/src/: BDCAnalyzer.cc  CoinAnalyzer.cc  FDC1Analyzer.cc  FDC2Analyzer.cc  HODAnalyzer.cc  NEBULAAnalyzer.cc  NINJAAnalyzer.cc  PlasticAnalyzer.cc
analyzer/base/include/: BaseAnalyzer.hh
config/: config.json  config.json.example  hist_ranges.json
config/s074/: config.json
core/include/: AnalysisManager.hh  CanvasOutput.hh  ConfigManager.hh  DisplayManager.hh  DisplayOutput.hh  HistogramManager.hh  HttpOutput.hh
core/src/: AnalysisManager.cc  CanvasOutput.cc  ConfigManager.cc  DisplayManager.cc  HistogramManager.cc  HttpOutput.cc
detectors/include/: BaseAnalyzer.hh  TestAnalyzer.hh
old/: DisplayManager.cc
web/: index.html  script.js  style.css
web/config/: config.json
web/config/s074/: config.json
