cmake_minimum_required(VERSION 3.15)
project(onlinemonitor LANGUAGES CXX)


find_package(ROOT REQUIRED COMPONENTS Net Core RIO Hist Tree Gui RHTTP Thread)
include(${ROOT_USE_FILE})

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_compile_options(-Wall -Wextra -pthread)

file(GLOB_RECURSE CORE_SOURCES "core/src/*.cc")
file(GLOB_RECURSE ANALYZER_SOURCES "analyzer/*/src/*.cc")
file(GLOB_RECURSE HEADERS "core/include/*.hh" "analyzer/*/include/*.hh")

set(MAIN_SOURCE "onlinemonitor.cc")

add_executable(onlinemonitor ${MAIN_SOURCE} ${CORE_SOURCES} ${ANALYZER_SOURCES})

### ANAROOT ---------------------------
if(DEFINED ENV{TARTSYS})
  message(STATUS "Found ANAROOT, TARTSYS = " $ENV{TARTSYS})
else()
  message(FATAL_ERROR "\$TARTSYS is not defined. please define the environment for ANAROOT.")
endif()

set(ANAROOT_LIBRARIES)
foreach(_cpt anaroot anacore anabrips anasamurai XMLParser)
  find_library(ANAROOT_${_cpt}_LIBRARY ${_cpt} $ENV{TARTSYS}/lib)
  if(ANAROOT_${_cpt}_LIBRARY)
    list(APPEND ANAROOT_LIBRARIES ${ANAROOT_${_cpt}_LIBRARY})
  endif()
endforeach()

target_link_libraries(onlinemonitor PRIVATE ${ANAROOT_LIBRARIES} ${ROOT_LIBRARIES})
#include_directories($ENV{TARTSYS}/include)
### ANAROOT ---------------------------


target_include_directories(onlinemonitor PRIVATE $ENV{TARTSYS}/include)
target_include_directories(onlinemonitor PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/core/include)
target_include_directories(onlinemonitor PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/analyzer/base/include)
target_include_directories(onlinemonitor PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/analyzer/SAMURAI/include)

target_compile_definitions(onlinemonitor PRIVATE "USE_THREADS")

### setup script ---------------------------
get_filename_component(ABS_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}" ABSOLUTE)
set(ONLINEMONITOR_HOME_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
set(SETUP_SCRIPT_CONTENT
"#!/bin/bash
# This script is auto-generated by CMake.

export TARTSYS=\"$ENV{TARTSYS}\"
source $TARTSYS/scripts/setup.sh
export ONLINEMONITOR_HOME=\"${ABS_INSTALL_DIR}\"
export PATH=\"\$ONLINEMONITOR_HOME/bin:\$PATH\"

echo \"[OnlineMonitor] Environment variables set.\"
echo \"ONLINE_HOME: \$ONLINEMONITOR_HOME\"
")
set(GEN_SETUP_SCRIPT "${CMAKE_BINARY_DIR}/setup_onlinemonitor.sh")
file(WRITE "${GEN_SETUP_SCRIPT}" "${SETUP_SCRIPT_CONTENT}")

install(FILES ${HEADERS} DESTINATION include)
install(TARGETS onlinemonitor DESTINATION bin)
install(FILES ${GEN_SETUP_SCRIPT} DESTINATION bin)
install(DIRECTORY web DESTINATION .)
install(DIRECTORY config DESTINATION .)
